--- a/android/gcm/app/src/main/res/layout/activity_main.xml
+++ b/android/gcm/app/src/main/res/layout/activity_main.xml
@@ -26,4 +26,19 @@
               android:layout_height="wrap_content"
               android:id="@+id/main_user_name"
               android:textAppearance="?android:attr/textAppearanceMedium"/>
+    <LinearLayout android:layout_width="wrap_content"
+                  android:padding="10dp"
+                  android:orientation="horizontal"
+                  android:layout_height="wrap_content">
+        <ImageView android:layout_width="wrap_content"
+                   android:src="@drawable/status"
+                   android:layout_height="wrap_content"/>
+        <ImageView android:layout_width="wrap_content"
+                   android:src="@drawable/status"
+                   android:layout_height="wrap_content"/>
+        <ImageView android:layout_width="wrap_content"
+                   android:src="@drawable/status"
+                   android:layout_height="wrap_content"/>
+
+    </LinearLayout>
 </LinearLayout>
