--- a/android/gcm/app/src/main/res/drawable/status.xml
+++ b/android/gcm/app/src/main/res/drawable/status.xml
@@ -4,7 +4,7 @@
         android:shape="oval">
 
     <solid
-            android:color="@color/gray"/>
+            android:color="@color/status_none"/>
 
     <size
             android:width="20dp"
