--- a/android/gcm/app/src/main/res/layout/activity_main.xml
+++ b/android/gcm/app/src/main/res/layout/activity_main.xml
@@ -2,29 +2,14 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:paddingLeft="@dimen/activity_horizontal_margin"
-              android:paddingRight="@dimen/activity_horizontal_margin"
-              android:paddingTop="@dimen/activity_vertical_margin"
-              android:paddingBottom="@dimen/activity_vertical_margin"
               android:layout_alignParentBottom="true"
-              android:background="@color/blue_grey_700"
               android:orientation="vertical" tools:context=".MainActivity">
 
-    <TextView android:text="@string/registering_message"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:id="@+id/informationTextView"
-              android:textAppearance="?android:attr/textAppearanceMedium"/>
-
-    <ProgressBar
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/registrationProgressBar"/>
 
     <fragment
             android:id="@+id/cloud_city"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:name="agi.hackday.lobot.CloudCity"
             />
 </LinearLayout>
