--- a/android/gcm/app/src/main/res/layout/fragment_cloud_city.xml
+++ b/android/gcm/app/src/main/res/layout/fragment_cloud_city.xml
@@ -1,37 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:background="@drawable/background"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-    <EditText android:text="@string/enter_user_name"
-              android:layout_width="match_parent"
-              android:textColor="@color/white"
-              android:layout_height="wrap_content"
-              android:id="@+id/main_user_name"
-              android:textAppearance="?android:attr/textAppearanceMedium"/>
 
-    <LinearLayout android:layout_width="wrap_content"
-                  android:padding="10dp"
-                  android:orientation="horizontal"
-                  android:layout_height="wrap_content">
+    <ScrollView android:layout_width="match_parent"
+                android:fillViewport="true"
+                android:layout_alignParentBottom="true"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:paddingTop="@dimen/activity_vertical_margin"
+                android:paddingBottom="@dimen/activity_vertical_margin"
+                android:layout_height="wrap_content">
 
-        <ImageView android:id="@+id/status_disconnected"
-                   android:layout_width="wrap_content"
-                   android:src="@drawable/status"
-                   android:layout_height="wrap_content"/>
+        <LinearLayout android:layout_width="match_parent"
+                      android:orientation="vertical"
+                      android:layout_height="match_parent">
 
-        <ImageView android:layout_width="wrap_content"
-                   android:src="@drawable/status"
-                   android:layout_marginLeft="10dp"
-                   android:layout_height="wrap_content"/>
+            <android.support.v7.widget.CardView
+                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                    android:layout_gravity="center"
+                    card_view:contentPadding="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:layout_marginTop="5dp"
+                    card_view:cardElevation="5dp"
+                    card_view:cardCornerRadius="4dp">
+                <TextView android:text="@string/registering_message"
+                          android:layout_width="wrap_content"
+                          android:textColor="@color/black"
+                          android:layout_height="wrap_content"
+                          android:layout_gravity="center_vertical"
+                          android:id="@+id/informationTextView"
+                          android:textAppearance="?android:attr/textAppearanceMedium"/>
+            </android.support.v7.widget.CardView>
 
-        <ImageView android:id="@+id/status_connected"
-                   android:layout_width="wrap_content"
-                   android:layout_marginLeft="10dp"
-                   android:src="@drawable/status"
-                   android:layout_height="wrap_content"/>
+            <ProgressBar
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/registrationProgressBar"/>
 
-    </LinearLayout>
+            <android.support.v7.widget.CardView
+                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/cloud_city_registration_form"
+                    android:layout_gravity="center"
+                    card_view:contentPadding="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+                    android:layout_marginTop="10dp"
+                    card_view:cardCornerRadius="4dp">
 
-</LinearLayout>
+                <RelativeLayout android:layout_width="match_parent"
+                                android:layout_gravity="center_vertical"
+                                android:layout_height="match_parent">
+                    <TextView android:layout_width="wrap_content"
+                              android:id="@+id/main_user_name_label"
+                              android:textColor="@color/black"
+
+                              android:text="Enter your user name:"
+                              android:layout_height="wrap_content"/>
+
+                    <EditText android:text="@string/enter_user_name"
+                              android:padding="5dp"
+                              android:layout_below="@id/main_user_name_label"
+                              android:layout_alignParentLeft="true"
+                              android:gravity="bottom"
+                              android:layout_marginTop="5dp"
+                              android:layout_width="match_parent"
+                              android:inputType="text"
+                              android:layout_height="wrap_content"
+                              android:id="@+id/main_user_name"
+                              android:textAppearance="?android:attr/textAppearanceMedium"/>
+
+                    <Button android:layout_width="wrap_content"
+                            android:id="@+id/submit"
+                            android:text="Connect"
+                            android:textSize="10sp"
+                            android:background="@color/blue_grey_500"
+                            android:layout_centerHorizontal="true"
+                            android:textColor="@color/white"
+                            android:gravity="center"
+                            android:padding="2dp"
+                            android:layout_marginTop="5dp"
+                            android:layout_below="@+id/main_user_name"
+                            android:layout_height="wrap_content"/>
+                </RelativeLayout>
+            </android.support.v7.widget.CardView>
+        </LinearLayout>
+    </ScrollView>
+</RelativeLayout>
