--- a/android/gcm/app/src/main/res/values/colors.xml
+++ b/android/gcm/app/src/main/res/values/colors.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="gray">#999999</color>
-    <color name="green">#00ff00</color>
-    <color name="red">#ff0000</color>
+    <color name="status_none">#999999</color>
+    <color name="status_ok">#00ff00</color>
+    <color name="status_error">#ff0000</color>
+    <color name="status_progress">#ffc000</color>
     <color name="white">#ffffff</color>
+    <color name="sky_blue_top">#6ba1e8</color>
+    <color name="sky_blue_bottom">#d2d3e6</color>
+    <color name="black">#000000</color>
     <color name="blue_grey_500">#607D8B</color>
     <color name="blue_grey_600">#546E7A</color>
     <color name="blue_grey_700">#455A64</color>
